# vhs-archiver

./: README.md  go.mod
cmd/vhscodec/: main.go
pkg/audio/: audio.go
pkg/calibrate/: calibrate.go
pkg/config/: config.go
pkg/decoder/: decoder.go
pkg/encoder/: encoder.go
scripts/: build.sh
ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
